[package]
name = "transactions"
version = "0.1.0"
authors = ["Piotr Sarna <p.sarna@tlen.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0.126", features = ["derive"] }
rust_decimal = "1.14.1"
